sending req, and displaying in list done, contact receive in progress

--- a/Kismat App/MainViewController/Xibs/StatusTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/StatusTVCell.xib
@@ -124,7 +124,7 @@
     </objects>
     <designables>
         <designable name="7fo-Gn-aRQ">
-            <size key="intrinsicContentSize" width="11.333333333333334" height="61"/>
+            <size key="intrinsicContentSize" width="10" height="42.333333333333336"/>
         </designable>
     </designables>
     <resources>
