--- a/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="200" id="KGk-i7-Jjw" customClass="TabsHeaderTVCell" customModule="Kismmet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="417" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="233" id="KGk-i7-Jjw" customClass="TabsHeaderTVCell" customModule="Kismmet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="417" height="233"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="417" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="417" height="233"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aYS-4N-m42">
-                        <rect key="frame" x="0.0" y="0.0" width="417" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="417" height="230"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eaf-aD-Gjo">
                                 <rect key="frame" x="8" y="18" width="401" height="66"/>
@@ -160,13 +160,98 @@
                                     <constraint firstAttribute="trailing" secondItem="aOV-Cp-Toq" secondAttribute="trailing" constant="48" id="yYh-MM-llY"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BMV-bh-sqL" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
+                                <rect key="frame" x="21" y="174" width="375" height="42"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Db8-Xx-spS">
+                                        <rect key="frame" x="349" y="14" width="15" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="84k-iq-fFc"/>
+                                            <constraint firstAttribute="height" constant="15" id="Sl8-AB-C3H"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="magnifyingglass" catalog="system" symbolScale="medium"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search for like minded people.." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fkW-P8-S4R">
+                                        <rect key="frame" x="8" y="4" width="333" height="34"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="333" id="T1h-VA-RqF"/>
+                                            <constraint firstAttribute="height" constant="34" id="qj1-WY-HgP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.69411764710000001" green="0.62745098040000002" blue="1" alpha="0.1483598924" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="fkW-P8-S4R" firstAttribute="leading" secondItem="BMV-bh-sqL" secondAttribute="leading" constant="8" id="EHR-Lq-MIJ"/>
+                                    <constraint firstAttribute="height" constant="42" id="FQx-CV-Ao0"/>
+                                    <constraint firstItem="Db8-Xx-spS" firstAttribute="leading" secondItem="fkW-P8-S4R" secondAttribute="trailing" constant="8" id="QS5-gZ-zhg"/>
+                                    <constraint firstAttribute="bottom" secondItem="fkW-P8-S4R" secondAttribute="bottom" constant="4" id="S4W-S5-2nf"/>
+                                    <constraint firstAttribute="trailing" secondItem="Db8-Xx-spS" secondAttribute="trailing" constant="11" id="cvK-sp-LT5"/>
+                                    <constraint firstAttribute="width" constant="375" id="nO7-Fa-uAa"/>
+                                    <constraint firstAttribute="bottom" secondItem="Db8-Xx-spS" secondAttribute="bottom" constant="13" id="p8X-jj-ZFg"/>
+                                    <constraint firstItem="Db8-Xx-spS" firstAttribute="top" secondItem="BMV-bh-sqL" secondAttribute="top" constant="14" id="pjB-Bf-tYb"/>
+                                    <constraint firstItem="fkW-P8-S4R" firstAttribute="top" secondItem="BMV-bh-sqL" secondAttribute="top" constant="4" id="qNB-s1-e4E"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="1.3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="1.3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="0.29999999999999999" height="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="0.69411764710000001" green="0.62745098040000002" blue="1" alpha="0.096569743380000003" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjT-fS-ZUo" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                <rect key="frame" x="156" y="141" width="104" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="pRd-mb-eBR"/>
+                                    <constraint firstAttribute="width" constant="104" id="tWi-8x-RYh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
+                                        <color key="value" name="Text grey"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="h"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="BMV-bh-sqL" secondAttribute="bottom" constant="14" id="C4i-f7-Z0s"/>
+                            <constraint firstAttribute="trailing" secondItem="BMV-bh-sqL" secondAttribute="trailing" constant="21" id="Nni-Vl-JkH"/>
+                            <constraint firstAttribute="trailing" secondItem="gjT-fS-ZUo" secondAttribute="trailing" constant="157" id="S11-mt-3Tv"/>
                             <constraint firstAttribute="trailing" secondItem="Eaf-aD-Gjo" secondAttribute="trailing" constant="8" id="Skh-BT-Kyy"/>
                             <constraint firstItem="Eaf-aD-Gjo" firstAttribute="leading" secondItem="aYS-4N-m42" secondAttribute="leading" constant="8" id="Wh3-uN-Pzj"/>
-                            <constraint firstAttribute="height" constant="200" id="Zui-8T-Sja"/>
+                            <constraint firstItem="gjT-fS-ZUo" firstAttribute="top" secondItem="dOp-pE-AC1" secondAttribute="bottom" constant="8" symbolic="YES" id="Z6o-np-Fiw"/>
+                            <constraint firstAttribute="height" constant="230" id="Zui-8T-Sja"/>
+                            <constraint firstItem="gjT-fS-ZUo" firstAttribute="leading" secondItem="aYS-4N-m42" secondAttribute="leading" constant="156" id="ee1-xv-tBN"/>
+                            <constraint firstItem="BMV-bh-sqL" firstAttribute="top" secondItem="gjT-fS-ZUo" secondAttribute="bottom" constant="12" id="h8J-pH-IhX"/>
                             <constraint firstItem="dOp-pE-AC1" firstAttribute="leading" secondItem="aYS-4N-m42" secondAttribute="leading" id="jhP-HF-SeH"/>
+                            <constraint firstItem="BMV-bh-sqL" firstAttribute="leading" secondItem="aYS-4N-m42" secondAttribute="leading" constant="21" id="keT-Gq-lzr"/>
                             <constraint firstItem="dOp-pE-AC1" firstAttribute="top" secondItem="Eaf-aD-Gjo" secondAttribute="bottom" constant="-3" id="uEw-Cx-Add"/>
                             <constraint firstItem="Eaf-aD-Gjo" firstAttribute="top" secondItem="aYS-4N-m42" secondAttribute="top" constant="18" id="udN-23-jxT"/>
                             <constraint firstAttribute="trailing" secondItem="dOp-pE-AC1" secondAttribute="trailing" id="uoz-W4-4jH"/>
@@ -176,7 +261,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="aYS-4N-m42" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="0TE-n8-XkA"/>
-                    <constraint firstAttribute="bottom" secondItem="aYS-4N-m42" secondAttribute="bottom" id="LR7-Kq-f03"/>
+                    <constraint firstAttribute="bottom" secondItem="aYS-4N-m42" secondAttribute="bottom" constant="3" id="LR7-Kq-f03"/>
                     <constraint firstAttribute="trailing" secondItem="aYS-4N-m42" secondAttribute="trailing" id="hNp-Si-Zbm"/>
                     <constraint firstItem="aYS-4N-m42" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="of4-hI-Bi2"/>
                 </constraints>
@@ -189,22 +274,30 @@
                 <outlet property="headerLbl" destination="4IN-oq-2Gx" id="uDt-O2-ZKi"/>
                 <outlet property="notifbtn" destination="D2h-CL-I8s" id="og2-9g-c4c"/>
                 <outlet property="reqBtn" destination="Pw8-Ur-Foh" id="33p-Kx-jVu"/>
+                <outlet property="searchBtn" destination="Db8-Xx-spS" id="aU8-Qq-jd1"/>
+                <outlet property="searchTF" destination="fkW-P8-S4R" id="PxU-mf-hbC"/>
+                <outlet property="searchView" destination="BMV-bh-sqL" id="kTW-fM-GI7"/>
+                <outlet property="settingsLbl" destination="gjT-fS-ZUo" id="H6p-bE-udg"/>
                 <outlet property="wifiManBtn" destination="amq-6n-jaK" id="0Qn-88-1rt"/>
             </connections>
-            <point key="canvasLocation" x="-27.209302325581394" y="43.133047210300433"/>
+            <point key="canvasLocation" x="-27.209302325581394" y="53.755364806866957"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="4IN-oq-2Gx">
-            <size key="intrinsicContentSize" width="86" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="86" height="21"/>
         </designable>
         <designable name="amq-6n-jaK">
             <size key="intrinsicContentSize" width="162" height="152"/>
+        </designable>
+        <designable name="gjT-fS-ZUo">
+            <size key="intrinsicContentSize" width="63" height="21"/>
         </designable>
     </designables>
     <resources>
         <image name="bell.badge.fill" catalog="system" width="117" height="128"/>
         <image name="logo name" width="3289" height="512"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="reqSelected" width="401" height="38"/>
         <image name="wifi man grey" width="162" height="152"/>
         <namedColor name="Secondary Grey">
